added the ability to specify the payment method
