# src/swagger_output.json
@@ -117,7 +117,7 @@
     },
     "/items/add": {
       "post": {
-        "description": "Add a new item to the system",
+        "description": "Add a new item to the system. Specify an item ID to update an existing item",
         "parameters": [
           {
             "name": "body",
@@ -145,6 +145,9 @@
                 },
                 "storageLocation": {
                   "example": "B6"
+                },
+                "paymentMethod": {
+                  "example": 1
                 }
               }
             }
@@ -166,6 +169,17 @@
     "/item_types/": {
       "get": {
         "description": "Get a list of accepted item types and their prices",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/payment_methods/": {
+      "get": {
+        "description": "Get a list of accepted payment methods",
         "parameters": [],
         "responses": {
           "200": {
